--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <h2>Odin Calculator</h2>
     </header>
 
+    <div class="bg-blurred"></div>
+    
     <section class="main-content">
-        <div class="bg-image"></div>
         <div class="calculator">
             <div class="display"></div>
             <div class="button-container">
