--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <!-- script src="calculator.js" defer></script -->
+    <script src="calculator.js" defer></script>
 </head>
 
 <body>
@@ -20,24 +20,24 @@
         <div class="calculator">
             <div class="display"></div>
             <div class="button-container">
-                <button class="numerical">7</button>
-                <button class="numerical">8</button>
-                <button class="numerical">9</button>
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
                 <button class="operator">/</button>
-                <button class="numerical">4</button>
-                <button class="numerical">5</button>
-                <button class="numerical">6</button>
-                <button class="operator">*</button>
-                <button class="numerical">1</button>
-                <button class="numerical">2</button>
-                <button class="numerical">3</button>
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="operator">*</button> 
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
                 <button class="operator">-</button>
-                <button class="numerical">.</button>
-                <button class="numerical zero">0</button>
+                <button class="digit">.</button>
+                <button class="digit">0</button>
                 <button class="clear">C</button>
                 <button class="operator">+</button>
                 <button class="equal">=</button>
-                <button class="remove">del</button>
+                <button class="delete">DEL</button>
             </div>
         </div>
     </section>
